fix: refactore client to customer word
